Fix widget title overlap

--- a/src/index.scss
+++ b/src/index.scss
@@ -698,10 +698,11 @@ $data-statuses: (
     margin-bottom: 0.6em;
     font-size: 0.74em;
     .sidebar {
-      background: #ddd;
+      background: #e1e1e1;
       padding: 0.8em;
       margin: 0.6em;
       margin-bottom: 0;
+      box-shadow: 1px 1px 2px #7778;
       &.campaign-sidebar {
         padding: 0;
         .campaign.widgets {
@@ -718,7 +719,7 @@ $data-statuses: (
         padding: 0.2em;
         padding-bottom: 0.4em;
         margin: 0;
-        color: #fff;
+        color: #777;
         font-size: 1.5em;
         user-select: none;
         text-transform: uppercase;
@@ -742,7 +743,7 @@ $data-statuses: (
     margin: 0.4em;
     width: 11em;
     height: 7em;
-    background-color: #eee;
+    background-color: #f7f7f7;
     border-bottom: 3px solid #ccc;
     padding: 1em;
     padding-top: 0.5em;
@@ -763,6 +764,7 @@ $data-statuses: (
     .widget-title {
       font-size: 1.2em;
       position: relative;
+      padding-right: 1em;
       .tooltip {
         display: none;
         position: absolute;
